crates/math-core/tests/snapshots/conversion_test__plus_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: (x+)
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo stretchy="false">)</mo>
</math>
