crates/math-core/tests/snapshots/conversion_test__plus_before_punctuation.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "4+,"
---
<math>
    <mn>4</mn>
    <mo lspace="0" rspace="0">+</mo>
    <mo rspace="0">,</mo>
</math>
