crates/math-core/tests/snapshots/conversion_test__plus_before_sum.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "4 + \\sum"
---
<math>
    <mn>4</mn>
    <mo>+</mo>
    <mo lspace="0" rspace="0">∑</mo>
</math>
