crates/math-core/tests/snapshots/conversion_test__plus_prime_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x+')"
---
<math>
    <mi>x</mi>
    <msup>
        <mo lspace="0" rspace="0">+</mo>
        <mo>′</mo>
    </msup>
    <mo stretchy="false">)</mo>
</math>
